# pc02-tarea3-cpd-julian

benchmarks/: CMakeLists.txt  main_bm.cpp
sensores/: parallel_tree.cpp  parallel_tree.h  sensor_tree.h
tests/: validation_test.cpp
